--- a/results-and-winnings/PCSO-lotto-6-42-results.html
+++ b/results-and-winnings/PCSO-lotto-6-42-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+     <input id="dec19" type="radio" name="t">
+     <label for="dec19">December 19, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">17</span><span class="ball text-xl">2</span><span class="ball text-xl">34</span><span class="ball text-xl">28</span><span class="ball text-xl">18</span><span class="ball text-xl">4</span></p>
+     <h4>Jackpot Prize : &#8369;7,324,428</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
+	     
+	     <div class="tab blue">
      <input id="dec16" type="radio" name="t">
      <label for="dec16">December 16, 2017</label>
      <div class="tab-content">
