--- a/results-and-winnings/Super-lotto-6-49-results.html
+++ b/results-and-winnings/Super-lotto-6-49-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+     <input id="dec21" type="radio" name="t">
+     <label for="dec21">December 21, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">2</span><span class="ball text-xl">43</span><span class="ball text-xl">16</span><span class="ball text-xl">32</span><span class="ball text-xl">5</span><span class="ball text-xl">44</span></p>
+     <h4>Jackpot Prize : &#8369;26,823,995</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>	
+	     
+	     <div class="tab blue">
      <input id="dec19" type="radio" name="t">
      <label for="dec19">December 19, 2017</label>
      <div class="tab-content">
