--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -105,7 +105,7 @@ function openNav() {
 	<tr><td>11 AM</td>
 	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">8</span></td></tr>
 	<tr><td>4 PM</td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
+	<td><span class="ball text-xl">1</span>&nbsp;&nbsp;<span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">4</span></td></tr>
 	<tr><td>9 PM</td>
 	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
