--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -99,15 +99,15 @@ function openNav() {
 	<br>
 	<p>The <abbr title="Philippine Charity Sweepstakes Office">PCSO</abbr> EZ 2 Lotto draws are held three times everyday, every 11:00 am, 4 pm and 9 pm.</p>
 
-	<h2 style="color:#4B77BE">Friday, December 29, 2017</time></h2>
+	<h2 style="color:#4B77BE">Saturday, December 30, 2017</time></h2>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
 	<thead><tr><th>TIME OF DRAW</th><th>RESULT</th></tr></thead>
 	<tr><td>11 AM</td>
-	<td><span class="ball text-xl">12</span>&nbsp;&nbsp;<span class="ball text-xl">7</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	<tr><td>4 PM</td>
-	<td><span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">13</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	<tr><td>9 PM</td>
-	<td><span class="ball text-xl">23</span>&nbsp;&nbsp;<span class="ball text-xl">3</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the two (2) winning numbers in <b>exact</b> order.</p>
@@ -228,7 +228,7 @@ function openNav() {
     <div style="padding:16px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%; max-width:500px">
     <p style="font-size: 17px"><b>Related searches for this topic :</b></p>
     <div class="scroll">
-    <p style="font-size:15px">'EZ2 result today dec 28' - 'EZ2 11am result december 28' - 'EZ2 4pm result december 28' - 'EZ2 hearing december 28' - 'EZ2 9pm result december 28' - lotto result dec 28 2017' - 'EZ2 hearing dec 28' - 'EZ2 11a m result' - 'PCSO result december 28 2017' - 'EZ2 dec 28 2017' - 'EZ2 4p m result' - 'EZ2 hearing december 28, 2017' - 'PCSO lotto result dec 28 2017' - 'PCSO result 11am december 28 2017' - 'EZ2 9p m result' - 'PCSO result dec 28 2017' - 'PCSO EZ2 result december 28 2017' - 'PCSO EZ2 Dec 28 2017'</p>
+    <p style="font-size:15px">'EZ2 result today dec 30' - 'EZ2 11am result december 30' - 'EZ2 4pm result december 30' - 'EZ2 hearing december 30' - 'EZ2 9pm result december 30' - lotto result dec 30 2017' - 'EZ2 hearing dec 30' - 'EZ2 11a m result' - 'PCSO result december 30 2017' - 'EZ2 dec 30 2017' - 'EZ2 4p m result' - 'EZ2 hearing december 30, 2017' - 'PCSO lotto result dec 30 2017' - 'PCSO result 11am december 30 2017' - 'EZ2 9p m result' - 'PCSO result dec 30 2017' - 'PCSO EZ2 result december 30 2017' - 'PCSO EZ2 Dec 30 2017'</p>
     </div></div></div><br>
     
     <h3 style="color:#4B77BE;"><strong>How To Claim EZ 2 Lotto Prize?</strong></h3>
